fix(karla-fricke): changed z-index of minimal menu

--- a/frontend/src/map/menu/karla-fricke/MapMenuKarlaFricke.scss
+++ b/frontend/src/map/menu/karla-fricke/MapMenuKarlaFricke.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 18px;
   right: 20px;
-  z-index: 1001;
+  z-index: 1000;
   transition: right 0.2s;
 
   &.map-menu-open {
